--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Price Monitor</title>
+    <style>
+      #root,
+      .layout {
+        width: 100%;
+        min-height: 100%;
+      }
+    </style>
   </head>
   <body>
     <main id="root"></main>
