--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <title>Price Monitor</title>
     <style>
-      #root,
-      .layout {
+      #root {
         width: 100%;
-        min-height: 100%;
+        height: 100%;
       }
     </style>
   </head>
