--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
         height: 100%;
       }
     </style>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png" />
   </head>
   <body>
     <main id="root"></main>
